--- a/css3-course/project-2/css/style.css
+++ b/css3-course/project-2/css/style.css
@@ -1,45 +1,46 @@
 @font-face {
-    font-family: 'Black Roasters';
-    src: url('../fonts/Black_Roasters.ttf');
+  font-family: "Black Roasters";
+  src: url("../fonts/Black_Roasters.ttf");
 }
 
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 115%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 110%;
 }
 
 header {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
 nav {
-    background-color: skyblue;
+  background-color: skyblue;
 }
 
 main {
-    background-color: yellow;
-    font-size: 115%;
+  background-color: yellow;
+  font-size: 115%;
 }
 
 footer {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
 li {
-    display: inline-block;
-    width: 200px;
+  display: inline-block;
+  width: 200px;
 }
 
 h1 {
-    text-align: center;
-    font-family: 'Black Roasters','Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: black;
+  text-align: center;
+  font-family: "Black Roasters", "Gill Sans", "Gill Sans MT", Calibri,
+    "Trebuchet MS", sans-serif;
+  color: black;
 }
 
 p {
-    line-height: 120%;
+  line-height: 120%;
 }
 
 main img {
-    height: 133.33px;
+  height: 133.33px;
 }
