--- a/css3-course/project-3/css/style.css
+++ b/css3-course/project-3/css/style.css
@@ -6,38 +6,57 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 110%;
+  background-color: #d1b89d;
 }
 
 header {
-  background-color: lightgray;
+  background-color: #c59d5f;
 }
 
 nav {
-  display: inline-block;
-  width: 80%;
+  height: 200px;
+  background-image: url("../images/coffee-shop-drinks.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: luminosity;
+  position: relative;
 }
 
 nav ul {
-  display: inline-flex;
-  justify-content: space-around;
-  width: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
   list-style-type: none;
+  position: absolute;
+  bottom: 0;
 }
 
-nav img {
-  position: relative;
-  top: 20px;
-  width: 10%;
-  display: inline-block;
+nav ul li {
+  padding: 10px;
+  background-color: rgb(117, 58, 58);
+  border: 2px solid black;
+  border-top-color: white;
+  border-left-color: white;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
 }
 
 main {
-  background-color: yellow;
+  background-color: #f4f0eb;
   font-size: 115%;
+  padding: 1px 20px;
 }
 
 footer {
-  background-color: lightgray;
+  background-color: #918c7e;
 }
 
 h1 {
@@ -57,7 +76,7 @@ main img {
 
 .grid {
   display: grid;
-  grid-template-columns: 40% 40%;
+  grid-template-columns: 150px 150px 150px 150px;
   justify-content: space-evenly;
   align-items: normal;
   row-gap: 10px;
@@ -65,10 +84,57 @@ main img {
 
 .grid img {
   width: 100%;
+  border: 3px solid brown;
+  margin: 5px;
+  padding: 5px;
+  opacity: 0.6;
+}
+
+.grid img:hover {
+  opacity: 1;
+  border-radius: 20px;
 }
 
 .flex {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+}
+
+.flex img {
+  width: 120px;
+  border: 3px solid burlywood;
+  margin: 5px;
+  padding: 5px;
+  transition-property: background, padding;
+  transition-duration: 1s;
+}
+
+.flex img:nth-child(odd) {
+  border-radius: 20px;
+}
+
+.flex img:nth-child(even) {
+  border-radius: 100px;
+}
+
+.flex img:hover {
+  background-color: brown;
+  padding: 10px;
+}
+
+#skip-to-main {
+  background-color: yellow;
+  border: 1px solid blue;
+  border-radius: 10px;
+  padding: 5px;
+  z-index: 1;
+  top: 10px;
+  left: 10px;
+  position: sticky;
+  opacity: 0;
+}
+
+#skip-to-main:focus {
+  opacity: 1;
 }
