fixed more errors related to validators

--- a/capstone/styles/style.css
+++ b/capstone/styles/style.css
@@ -25,7 +25,7 @@ main {
 }
 
 footer {
-  background-color: #c1440e;
+  background-color: #d2a679;
   border: 1px solid #3e2723;
   margin: 10px;
   padding: 10px;
